responsive nav menu collapse fix

--- a/TW Portfolio.css
+++ b/TW Portfolio.css
@@ -80,8 +80,8 @@ body {
   }
   
   .fa {
-      padding: 20px;
-      font-size: 30px;
+      padding: 10px;
+      font-size: 25px;
   }
   
   
